# monoconf

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: tests.yml
src/mopoconf/: netclient.py  netmapper.py
tests/: test_monoconf.py  test_mopoconf.py
