[metadata]
name = mopoconf
description = Configuration Management and Monitoring
author = Rohit Thakur
license = MIT
license_file = LICENSE 
platforms = unix, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
  mopoconf

install_requires = 
  python-nmap>=0.7.1

python_requires = >=3.6
package_dir = 
   = src
zip_safe = monoconf

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    python-nmap>=0.7.1

[options.package_data]
mopoconf = py.typed

[flake8]
max-line-length = 160

